Fix overflow and whitespace

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,6 +1,9 @@
 .App {
-  background-color: #bdbdbdad;
   height: 100vh;
+}
+
+body{
+  background-color: #bdbdbdad;
 }
 
 .App-logo {
